azure/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-ns
  labels:
    app: example
    monitoring: metrics-text
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: example
